@@ -1,4 +1,4 @@
-﻿gid=伐木场,黏土矿,铁矿场,农场,木材厂,砖块厂,铸造厂,磨坊,面包房,仓库,粮仓,铁匠铺,军械库,竞技场,中心大楼,集结点,市场,大使馆,兵营,马厩,工场,研发所,山洞,市政厅,行宫,皇宫,宝库,交易所,大兵营,大马厩,罗马城墙,日尔曼城墙,高卢城墙,石匠铺,酿酒厂,陷阱机,英雄园,大仓库,大粮仓,世界奇观
+﻿gid=伐木场,黏土矿,铁矿场,农场,木材厂,砖块厂,铸造厂,磨坊,面包房,仓库,粮仓,铁匠铺,军械库,竞技场,中心大楼,集结点,市场,大使馆,兵营,马厩,工场,研发所,山洞,市政厅,行宫,皇宫,宝库,交易所,大兵营,大马厩,罗马城墙,日尔曼城墙,高卢城墙,石匠铺,酿酒厂,陷阱机,英雄园,大仓库,大粮仓,世界奇观,饮马槽
 aid1=古罗马步兵,禁卫兵,帝国兵,使节骑士,帝国骑士,将军骑士,冲撞车,火焰投石器,参议员,拓荒者,英雄
 aid2=棍棒兵,矛兵,斧头兵,侦察兵,圣骑士,日尔曼骑兵,冲撞车,投石器,执政官,拓荒者,英雄
 aid3=方阵兵,剑士,探路者,雷法师,德鲁伊骑兵,海顿圣骑士,冲撞车,投石器,首领,拓荒者,英雄
